


DescTools 0.99.46.1 (2022-10-30)
------------------------------

NEW FUNCTIONS ADDED:
  * 
  
UPDATED FUNCTIONS:
  * Gini() has been recoded to gain better support for weights.
  
BUGFIXES:
  * 





DescTools 0.99.46 (2022-08-30)
------------------------------

UPDATED FUNCTIONS:
  * Append() gains a TOne interface, to be able to add rows to a Table 1 (TOne) object.
  * BarText() internally uses the more flexible BoxedText() instead of text().
  * DunnTest, ConoverTest, VanWaerdenTest, NemenyiTest, DunnettTest get new organizing
    code analogue to kruskal.test in order to handle characters as factors correctly.
  * DunnTest() returns the matrix of p-Values in addition.  
  * Format() gains a new interface for ftables.
  
BUGFIXES:
  * IdentifyA() now reverses the coordinates in the attribute.
  * Two changes in the helpfiles of BinomRatCI() ans StdCoef() which popped up 
    with R 4.2.




DescTools 0.99.45 (2022-05-09)
------------------------------

NEW FUNCTIONS ADDED:
  * SplitToDummy() for splitting a string vector and create a dummy code matrix.

UPDATED FUNCTIONS:
  * CochranArmitageTest has been updated to use scores instead of ordinal values only.
    Further the alternatives have been reduced to c("two.sided", "one.sided") 
    instead of c("two.sided", "increasing", "decreasing"), which were poorly defined.
  * BoxedText gains a formula interface.  
  * RevCode takes dots now, for reverse numeric codes.
  * Gmean will now report NA whenever there is a negative value in vector x, 
    despite if x also contains zero (like SAS, unlike SPSS). 
    (Credits to Imanol Zubizarreta)
  * Quantile() now uses the argument "names", which so far had no 
    meaning within the function body. 
  * PlotCorr() now displays the matrix in the same form, as it is defined.
    x is internally transposed.
  * In Desc.table() the Phi coefficient has been replaced by Kendall Tau-B. 
    Phi is only sensible in the case of two dichotomous variables, and then 