@@ -4,7 +4,7 @@
 \title{Place Value Labels on a Barplot
 %%  ~~function to do ... ~~
 }
-\description{It can sometimes make sense to display data values directly on the bars. There are a handful of obvious alternatives for labeling bar charts with their specific values, either on top of the bars, right below the upper end, in the middle or at the bottom. Determining the required geometry, while not difficult, is cumbersome and the code is distractingly long within the analysis code. The present function offers a short way to solve the task. It can place text either in the middle of the stacked bars, on top or on the bottom of a side by side barplot. 
+\description{It can sometimes make sense to display data values directly on the bars in a barplot. There are a handful of obvious alternatives for placing the labels, either on top of the bars, right below the upper end, in the middle or at the bottom. Determining the required geometry - although not difficult - is cumbersome and the code is distractingly long within an analysis code. The present function offers a short way to solve the task. It can place text either in the middle of the stacked bars, on top or on the bottom of a barplot (side by side or stacked). 
 %%  ~~ A concise (1-5 lines) description of what the function does. ~~
 }
 \usage{
@@ -24,10 +24,10 @@ BarText(height, b, labels = height, beside = FALSE, horiz = FALSE,
   \item{labels}{the labels to be placed on the bars.
 %%     ~~Describe \code{labels} here~~
 }
-  \item{beside}{a logical value. If FALSE, the columns of height are portrayed as stacked bars, and if TRUE the columns are portrayed as juxtaposed bars.
+  \item{beside}{a logical value. If \code{FALSE}, the columns of height are portrayed as stacked bars, and if \code{TRUE} the columns are portrayed as juxtaposed bars.
 %%     ~~Describe \code{beside} here~~
 }
-  \item{horiz}{a logical value. If FALSE, the bars are drawn vertically with the first bar to the left. If TRUE, the bars are drawn horizontally with the first at the bottom.
+  \item{horiz}{a logical value. If \code{FALSE}, the bars are drawn vertically with the first bar to the left. If \code{TRUE}, the bars are drawn horizontally with the first at the bottom.
 %%     ~~Describe \code{horiz} here~~
 }
 \item{cex}{numeric character expansion factor; multiplied by \code{\link{par}}\code{("cex")} yields the final character size. \code{NULL} and \code{NA} are equivalent to \code{1.0}.}
@@ -38,7 +38,7 @@ defining if the labels should be placed on top of the bars (inside or outside) o
 
 \item{offset}{a vector indicating how much the bars should be shifted relative to the x axis.}
 
-\item{\dots}{the dots are passed to the \code{\link{text}}.
+\item{\dots}{the dots are passed to the \code{\link{BoxedText}}.
 %%     ~~Describe \code{\dots} here~~
 }
 }
@@ -56,12 +56,12 @@ Notice that when the labels are placed on top of the bars, they may be clipped. 
 \value{returns the geometry of the labels invisibly}
 
 
-\seealso{\code{\link{help}}
+\seealso{\code{\link{BoxedText}}
 %% ~~objects to See Also as \code{\link{help}}, ~~~
 }
 \examples{
 # simple vector
-x <- c(453, 44, 56, 34)
+x <- c(353, 44, 56, 34)
 b <- barplot(x)
 BarText(x, b, x)
 
@@ -82,7 +82,7 @@ BarText(VADeaths, b=b, horiz = TRUE, col="red", cex=1.5)
 
 
 # position of the text
-par(mfrow=c(3,2))
+old <- par(mfrow=c(3,2), xpd=NA)
 off <- c(10, 4, 1, 20, -15)
 
 for(pos in eval(formals(BarText)$pos)) {
@@ -91,6 +91,7 @@ for(pos in eval(formals(BarText)$pos)) {
   abline(h=0)
   BarText(x, b, x, offset = off, pos=pos, cex=1.5, horiz=TRUE)
 }
+par(old)
 }
 % Add one or more standard keywords, see file 'KEYWORDS' in the
 % R documentation directory.
