@@ -9,6 +9,11 @@ NEW FUNCTIONS ADDED:
   
 UPDATED FUNCTIONS:
   * Gini() has been recoded to gain better support for weights.
+  * PlotProbDist() gains a dots argument.
+  * BoxedText() has two renamed arguments old txt.col has be
+    renamed to col and old col has been renamed to bg.
+  * Set fixed global .RandomSeed for Dunnett-test in order to get 
+    reproducible results.
   
 BUGFIXES:
   * 
